Se agrega archivo shiro.ini en pruebas REST y SELENIUM