@@ -90,8 +90,9 @@
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.3.3</version>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.5</version>
+            <scope>test</scope>
         </dependency>
         <!-- Podam -->
         <dependency>
@@ -101,7 +102,29 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins>                           
+        <pluginManagement>
+            <plugins>
+                <!-- For executing & reporting ntegration tests -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.18</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18</version>                   
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.7.4.201502262128</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    
+        <plugins>
+                           
             <plugin> 
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -112,7 +135,6 @@
                             <goal>prepare-agent</goal>
                         </goals>
                         <configuration>
-                            <destFile>${sonar.jacoco.reportPath}</destFile>
                             <propertyName>surefireArgLine</propertyName>
                             <excludes>
                                 <exclude>**/*IT.java</exclude>
@@ -151,9 +173,7 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
-                            Sets the path to the file which contains the execution data. 
                             <dataFile>${sonar.jacoco.itReportPath}</dataFile>
-                            Sets the output directory for the code coverage report. 
                             <outputDirectory>${sonar.jacoco.outItReportPath}</outputDirectory>
                         </configuration>
                     </execution>
@@ -165,7 +185,7 @@
                 <version>2.18</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <argLine>${jacoco.agent.argLine}</argLine> 
+                    <argLine>${jacoco.agent.argLine} -XX:MaxPermSize=1024m</argLine> 
                     <reportsDirectory>${project.build.directory}/target/failsafe-reports</reportsDirectory>
                     <excludes>
                         <exclude>**/*Test.java</exclude>
@@ -186,7 +206,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18</version>
-                <configuration>
+                <configuration>                    
                     <argLine>${surefireArgLine}</argLine>
                     <excludes>
                         <exclude>**/*IT.java</exclude>
@@ -210,6 +230,6 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-        </plugins>
-    </build>       
+        </plugins>                              
+    </build>
 </project>
